Color contrast issue resolved2

--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -1,6 +1,5 @@
 :root {
-    --primary-color: #074e07;
-    /*dome*/
+    --primary-color: #043304;
     --secondary-color: #f5b37e;
     --accent1-color: #172a31;
     --accent2-color: #f0d877;
@@ -10,14 +9,13 @@
 
 * {
     margin: 0;
-    /*done*/
     padding: 0;
     box-sizing: border-box;
 }
 
 body {
     font-family: var(--body-font);
-    /*done*/
+
     color: var(--accent1-color);
 }
 
@@ -25,13 +23,11 @@ header,
 main,
 footer {
     width: 840px;
-    /*done*/
     margin: 0 auto;
 }
 
 header {
     display: grid;
-    /*done*/
     grid-template-columns: 120px 1fr;
     color: var(--accent2-color);
     gap: 10rem;
@@ -43,7 +39,6 @@ header {
 
 header img {
     width: 120px;
-    /*done*/
     height: auto;
     margin-left: 20px;
 
@@ -51,7 +46,6 @@ header img {
 
 header nav {
     display: flex;
-    /*done*/
     justify-content: center;
     gap: 0;
     padding: 10px 20px;
@@ -60,7 +54,6 @@ header nav {
 
 header nav a {
     color: var(--accent2-color);
-    /*done*/
     text-decoration: none;
     background-color: #074e07;
     font-weight: bold;
@@ -82,7 +75,6 @@ nav ul {
 h1,
 h2 {
     font-family: var(--heading-font);
-    /*done*/
     color: var(--primary-color);
 }
 
@@ -91,13 +83,11 @@ p,
 section,
 article {
     margin: 16px;
-    /*done*/
     padding: 8px;
 }
 
 .socialmedia {
     display: flex;
-    /*done*/
     gap: 10px;
 }
 
@@ -110,19 +100,16 @@ article {
 
 .hero {
     position: relative;
-    /*done*/
 }
 
 .hero img {
     display: block;
-    /*done*/
     width: 100%;
     height: auto;
 }
 
 .hero h1 {
     position: absolute;
-    /*done*/
     top: 20px;
     width: 100%;
     padding: 16px;
@@ -134,7 +121,6 @@ article {
 
 h2 {
     background-color: var(--primary-color);
-    /*done but check again*/
     text-align: center;
     color: aquamarine;
     padding: 15px;
@@ -143,7 +129,6 @@ h2 {
 
 .hero article {
     position: absolute;
-    /*done*/
     bottom: 30px;
     left: 10px;
     right: 10px;
@@ -158,7 +143,6 @@ h2 {
 
 .hero article img {
     float: right;
-    /*done*/
     width: 115px;
     box-shadow: 0 0 10px gray;
     border: 1px solid black;
@@ -167,7 +151,6 @@ h2 {
 
 .history {
     text-align: center;
-    /*done*/
     margin: 40px auto;
     max-width: 1000px;
     background-color: var(--primary-color);
@@ -177,13 +160,11 @@ h2 {
 
 .history h2 {
     color: var(--accent2-color);
-    /*done*/
     margin-top: 5px;
 }
 
 .history-grid {
     display: grid;
-    /*done*/
     grid-template-columns: 1fr auto 1fr;
     margin-top: 20px;
     gap: 20px;
@@ -192,16 +173,7 @@ h2 {
 
 .history-grid img {
     width: 250px;
-    /*done*/
     height: auto;
-}
-
-.hero article p {
-    font-size: 18px;
-    /*not done mine stopped here*/
-    flex: 1;
-    color: var(--accent1-color);
-
 }
 
 .adventure {
